fixed spacing and button sizes in projects section

--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -28,6 +28,7 @@
     button {
         margin-left: 0;
         margin-right: 0;
+        width: 142px;
     }
 }
 
@@ -95,16 +96,23 @@
 
     .projectInfo {
         align-items: center;
+        margin-top: 3%;
+        width: 80%;
+        p {
+            margin-top: 5%;
+        }
     }
-
+    
     .projectButtons {
         display: flex;
         flex-direction: column;
         align-items: center;
+        // margin-top: 10%;
 
         button {
             margin-left: 0;
             margin-right: 0;
+            margin-top: 10%;
         }
 
         .projects {
